--- a/public/style.css
+++ b/public/style.css
@@ -35,14 +35,36 @@
 /* 1. Theme Default CSS
 /*----------------------------------------*/
 body {
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Rubik', sans-serif, Open Sans,"Helvetica Neue",Helvetica,Arial;
     font-weight: 400;
     color: #333;
     font-size: 14px;
     line-height: 24px;
 }
 .group-title {
-    border: 1px solid #ddd;
+   /* border: 1px solid #ddd;*/
+    color: #363f4d;
+    margin-bottom: 20px;
+    padding: 15px 25px;
+    position: relative;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-align-items: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -moz-justify-content: space-between;
+    -ms-justify-content: space-between;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+}
+.group-titlewish{
+   /* border: 1px solid #ddd;*/
     color: #363f4d;
     margin-bottom: 20px;
     padding: 15px 25px;
@@ -81,7 +103,17 @@ body {
     font-size: 18px;
     font-weight: 500;
     text-transform: capitalize;
+    margin-left: 45%;
+    font-family: Comic Sans MS;
 }
+
+.group-titlewish h2 {
+    font-size: 18px;
+    font-weight: 500;
+    text-transform: capitalize;
+    font-family: Comic Sans MS;
+}
+
 .title-border {
     border-bottom: 1px solid #dcdcdc;
     padding-bottom: 10px;
